--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,4 +1,34 @@
 .features{
-    background-color: $color-grey-light-2;
+    
     grid-column: center-start / center-end;
+
+    margin: 15rem 0;
+
+    display: grid;
+    // grid-template-columns: repeat(3, 1fr); // we have to change template-column for responsive design (responsive without using media queries)
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 6rem;    
+    align-items: start;
+}
+
+.feature{
+
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-row-gap:1.5rem;
+    grid-column-gap: 2.5rem;
+    
+
+    &__icon{
+        fill: $color-primary;
+        width: 4.5rem;
+        height: 4.5rem;
+        //grid-row: 1 / -1; // -1 is the end of the explicit grid and to work -1 we have to define a explicit grid first or use span instead of -1
+        grid-row:  1 / span 2;
+    }
+
+    &__text{
+
+        font-size: 1.7rem;
+    }
 }
