--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -3,3 +3,28 @@
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1/-1;
 }
+
+.nav-btn{
+    border: none;
+    border-radius: 0;
+
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+
+    &::before,
+    &::after{
+        background-color: #fff;
+        height: 2px;
+        width: 4.5rem;
+        content: "";
+        display: block;
+    }
+
+    &::before{
+        transform: translateY(-1.5rem);
+    }
+    &::after{
+        transform: translateY(1.5rem);
+    }
+}
