--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,6 +2,9 @@
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1/-1;
+
+    display: flex;
+    justify-content: center;
 }
 
 .nav-btn{
@@ -11,6 +14,7 @@
     background-color: #fff;
     height: 2px;
     width: 4.5rem;
+    margin-top: 4rem;
 
     &::before,
     &::after{
@@ -25,6 +29,7 @@
         transform: translateY(-1.5rem);
     }
     &::after{
-        transform: translateY(1.5rem);
+        transform: translateY(1.3rem);
+
     }
 }
