--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,7 +7,6 @@
     padding: 8rem;
     padding-top: 6rem;
     
-
     display: grid;
     grid-template-rows: 1fr min-content 6rem 1fr;
     grid-template-columns: max-content;
@@ -24,12 +23,38 @@
         justify-self:start;
     }
     &__seenon-text{
+        display: grid;
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
 
+        grid-template-columns: 1fr max-content 1fr;
+        grid-column-gap:1.5rem;
+       align-items: center;
+        
+
+        &::before,
+        &::after{
+            content: "";
+            height: .1rem;
+            display: block;
+            background-color:currentColor;
+        }
+        &::before{
+            
+        }
     }
 
     &__seenon-logos{
+
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3rem;
+        justify-items: center;
+
+
         img{
             height: 2.5rem;
+            filter: brightness(70%);
         }
     }
 
