Completed without media querry

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,7 +9,7 @@
     
     display: grid;
     grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-columns: minmax(max-content);
     grid-row-gap: 1.5rem;
     justify-content: center;
 
@@ -53,7 +53,8 @@
 
 
         img{
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
         }
     }
