--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body {
   padding-top: 6rem;
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-columns: minmax(max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
   .header__logo {
@@ -139,16 +139,23 @@ body {
     grid-column-gap: 3rem;
     justify-items: center; }
     .header__seenon-logos img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%); }
 
 .realtors {
   background-color: #101d2c;
-  grid-column: col-start 7 / full-end; }
+  grid-column: col-start 7 / full-end;
+  padding: 3rem;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  grid-row-gap: 2rem;
+  justify-content: center; }
   .realtors__list {
     display: grid;
     grid-template-columns: min-content max-content;
-    grid-template-rows: 2rem;
+    grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center; }
   .realtors__img {
