--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,10 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+// RESPONSIVE BREAKPOINT
+$bp-largest: 75em; //   1200 / 16 = 75
+$bp-large: 62.5em; //1000px / 16 = 62.5
+
 *,
 *::before,
 *::after{
@@ -24,7 +28,11 @@ $font-display: 'Josefin Sans', sans-serif;
 
 html{
     box-sizing: border-box;
-    font-size: 62.5% // 10px/16px = 62.5%  => 1rem = 10px;
+    font-size: 62.5%; // 10px/16px = 62.5%  => 1rem = 10px;
+
+    @media only screen and(max-width:$bp-largest){
+        font-size: 50%;
+    }
 }
 
 body{
