--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -9,6 +9,11 @@
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;    
     align-items: start;
+
+    @media only screen and (max-width:$bp-small){
+        margin: 6rem 0;
+        grid-gap: 4rem; 
+    }
 }
 
 .feature{
