--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,13 +9,23 @@
     grid-row-gap: 2rem;
     justify-content: center;
 
-
+    @media only screen and (max-width:$bp-medium){
+        grid-column: 1 / -1;
+    }
     &__list{
         display: grid;
         grid-template-columns: min-content max-content;
         grid-column-gap: 2rem;
         grid-row-gap: 5vh; // to look good on large screen
         align-items: center;
+
+        @media only screen and (max-width:$bp-medium){
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media only screen and(max-width:$bp-small){
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img{
