--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -4,11 +4,17 @@
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
         background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)),  url(../img/back.jpg);
+        background-size: cover;
 
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(6, 1fr);
         align-items: center;
+
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1 / -1;
+            padding: 3rem;
+        }
     }
 
     &__img--1{
@@ -16,6 +22,13 @@
         grid-row: 2/6;
         grid-column: 2 / 6;
         box-shadow:  0 2rem 5rem rgba(#000, .1);
+
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1 / 5;
+            grid-row: 1 / -1;
+            height: 100%;
+            width: 100%;
+        }
     }
 
     &__img--2{
@@ -24,6 +37,11 @@
         grid-column: 4 / 7;
         z-index: 20;
         box-shadow:  0 2rem 5rem rgba(#000, .1);
+
+        @media only screen and (max-width:$bp-medium){
+            grid-row: 1 / -1;
+            width: 100%;
+        }
     }
 
     &__content{
@@ -42,7 +60,14 @@
         align-content: center;
         justify-items: start;
         
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1 / -1;
+            grid-row: 5/ 6;
+        }
 
+        @media only screen and (max-width:$bp-small){
+            padding: 4rem 6vw;
+        }
 
     }
 
